--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,64 @@
-<h1>
-  {{title}}
-</h1>
+<div class="container">
+  <div class="row">
+    <div class="col xs 12">
+      <ul materialize="collapsible" class="collapsible" data-collapsible="accordion">
+        <li>
+          <div class="collapsible-header"><i class="material-icons">filter_drama</i>First</div>
+          <div class="collapsible-body"><p>Lorem ipsum dolor sit amet.</p></div>
+        </li>
+        <li>
+          <div class="collapsible-header"><i class="material-icons">place</i>Second</div>
+          <div class="collapsible-body"><p>Lorem ipsum dolor sit amet.</p></div>
+        </li>
+        <li>
+          <div class="collapsible-header"><i class="material-icons">whatshot</i>Third</div>
+          <div class="collapsible-body"><p>Lorem ipsum dolor sit amet.</p></div>
+        </li>
+      </ul>
+    </div>
+  </div>
+
+  <div class="row">
+    <form materialize class="col s12">
+      <div class="row">
+        <div class="input-field col s6">
+          <input placeholder="Placeholder" id="first_name" type="text" class="validate">
+          <label for="first_name">First Name</label>
+        </div>
+      </div>
+    </form>
+  </div>
+
+  <div class="row">
+    <!-- Modal Trigger -->
+    <a class="waves-effect waves-light btn modal-trigger" (click)="openModal()">Modal</a>
+
+    <!-- Modal Structure -->
+    <div id="modal1" class="modal bottom-sheet" materialize="modal" [materializeParams]="[{dismissible: false}]" [materializeActions]="modalActions">
+      <div class="modal-content">
+        <h4>Modal Header</h4>
+        <p>A bunch of text</p>
+      </div>
+      <div class="modal-footer">
+        <a class="waves-effect waves-green btn-flat" (click)="closeModal()">Close</a>
+        <a class="modal-action modal-close waves-effect waves-green btn-flat">Agree</a>
+      </div>
+    </div>
+  </div>
+
+
+  <div class="row">
+    <div materialize="carousel" class="carousel">
+      <a class="carousel-item" href="#one!"><img src="http://lorempixel.com/250/250/nature/1"></a>
+      <a class="carousel-item" href="#two!"><img src="http://lorempixel.com/250/250/nature/2"></a>
+      <a class="carousel-item" href="#three!"><img src="http://lorempixel.com/250/250/nature/3"></a>
+      <a class="carousel-item" href="#four!"><img src="http://lorempixel.com/250/250/nature/4"></a>
+      <a class="carousel-item" href="#five!"><img src="http://lorempixel.com/250/250/nature/5"></a>
+    </div>
+  </div>
+
+  <div class="row">
+    <router-outlet></router-outlet>
+  </div>
+
+</div>
